generation changes, ui fixes
